# address_book_app

./: .coverage  .gitignore  Dockerfile  README.md  address_book.py  box.py  box_1.py  chat_bot.py  chat_bot_main.py  click_t.py  com.txt  commands.py  constants.py  entities.py  error.py  fields.py  generator_of_contacts.py  main.py  menu.py  pyproject.toml  requirements.txt  run_address_book.py  run_bot.py  setup.cfg  test.py  test_runner.py  user.py  utils.py  validation.py  verify_data.py
chat_bot/: address_book.py  entities.py  error.py  run_bot.py  utils.py  validation.py
my_address_book/: __init__.py  address_book.py  constants.py  entities.py  error.py  garbage_sorter.py  interface_book.py  interface_main_form.py  main_form.py  main_form_AB.py  main_form_NB.py  main_form_SF.py  menu_forms.py  menu_forms_AB.py  menu_forms_NB.py  notes_book.py  records.py  sort.py  sorting_files.py  theme.py  utils.py  validation.py
src/: run_address_book.py
src/my_addressbook/: address_book.py  entities.py  error.py  main_form.py  menu_forms.py  run_address_book.py  theme.py  utils.py  validation.py
src/tests/: test_class_AB.py  test_class_Email.py  test_class_Phone.py  test_class_Record.py  test_class_User.py
tests/: test_chat_bot.py  test_class_AB.py  test_class_Birthday.py  test_class_Email.py  test_class_NB.py  test_class_Name.py  test_class_Note.py  test_class_Phone.py  test_class_Record.py  test_class_RecordContact.py  test_class_RecordNote.py  test_class_User.py  test_commands.py  test_utils.py  test_validation.py
