[tool.poetry]
name = "chat-bot-go-it"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_bot_go_it"}]

[tool.poetry.dependencies]
python = "^3.11"
npyscreen = "^4.10.5"
prettytable = "^3.8.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.4.1"
black = "^23.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pyupgrade = "^3.7.0"
ruff = "^0.0.275"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "menu_forms_AB.py",
    "main_form_AB.py",
    "main_form_NB.py",
    "menu_forms_NB.py",
    "interface_main_form.py",
    "test_runner.py",
    "test_class_AB.py",
    "test_class_Email.py",
    "test_class_Phone.py",
    "test_class_Record.py",
    "test_class_User.py",
    "test_utils.py",
    "test_validation.py",
    "test_class_NB.py",
    "test_class_Note.py",
    "test_class_RecordContact.py",
    "test_class_RecordNote.py"
]

[tool.mypy]
exclude = [
    "sort.py"
]